fix code field styling on mobiles (#8314)

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -370,3 +370,11 @@ kbd {
     }
   }
 }
+
+/* Code field styling */
+
+@media (max-width: $MQMobileNarrow) {
+  .theme-default-content div[class*="language-"] {
+    margin initial
+  }
+}
